# The-war-room

./: README.md  phases.md  pyproject.toml
agents/change_agent/: main.py
agents/commander/: main.py
agents/logs_agent/: main.py
agents/metrics_agent/: main.py
agents/runbook_agent/: main.py
band/: agents.yaml  channels.yaml
data/inc-001/: alert.json
data/inc-001/changes/: deploys.json
data/inc-001/logs/: events.jsonl
data/inc-001/metrics/: snapshots.json
data/inc-001/runbooks/: api-gateway.md
data/inc-002/: alert.json
data/inc-002/changes/: deploys.json
data/inc-002/logs/: events.jsonl
data/inc-002/metrics/: snapshots.json
data/inc-002/runbooks/: user-service.md
data/inc-003/: alert.json
data/inc-003/changes/: deploys.json
data/inc-003/logs/: events.jsonl
data/inc-003/metrics/: snapshots.json
data/inc-003/runbooks/: payment-service.md
demo/: demo-script.md  run_demo.py
docs/: README.md  architecture.md  codebase.md  demo.md  overview.md  phase5-spec.md  phases.md
lib/: __init__.py  band_client.py  evidence.py  git_ops.py  models.py  postmortem_generator.py  remediation.py  scorer.py
postmortems/inc-001/: postmortem.md
postmortems/inc-inc-001/: postmortem.md
tests/: test_change_agent.py  test_commander.py  test_git_ops.py  test_logs_agent.py  test_metrics_agent.py  test_phase5_data_pipeline.py  test_postmortem_generator.py  test_remediation.py  test_runbook_agent.py  test_scorer.py
ui/: dashboard.html
